--- a/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
@@ -212,6 +212,8 @@
  pd_cryovolcano_desc: "Life persists on this world thanks to nutrients released by cryovolcanoes, which eject water, ammonia, and methane from beneath the frozen surface."
  pd_treeline: "$pc_pd_treeline$"
  pd_treeline_desc: "$pc_pd_treeline_desc$"
+ pd_peatland: "$pc_pd_peatland$"
+ pd_peatland_desc: "$pc_pd_peatland_desc$"
  pd_cryoflora: "Cryoflora World"
  pd_cryoflora_desc: "The planet's hydrosphere is mostly frozen, with temperatures rarely rising above freezing. Nevertheless, the flora and fauna have adapted with antifreeze proteins, creating a beautiful glowing ecosystem."
  pd_lichen: "Lichen World"
