--- a/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_classes_l_german.yml
@@ -545,6 +545,12 @@
  mod_pc_pd_treeline_habitability: "Tundra Habitability"
  trait_pc_pd_treeline_preference: "Tundra Preference"
  trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_peatland: "Peatland World"
+ pc_pd_peatland_desc: "A rocky planet with a nitrogen-oxygen atmosphere, where sprawling peatlands stretch across continents. Thick mats of moss and decaying vegetation form a living crust that stores immense reserves of organic matter, releasing slow tides of gas and moisture into the air."
+ pc_pd_peatland_adj: "peatty"
+ mod_pc_pd_peatland_habitability: "Tundra Habitability"
+ trait_pc_pd_peatland_preference: "Tundra Preference"
+ trait_pc_pd_peatland_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Kryflora Welt"
  pc_pd_cryoflora_desc: "Kalte und felsige Welt mit einer Stickstoff-Sauerstoff-Atmosphäre. Während die Temperaturen oft unter dem Gefrierpunkt liegen, ist der Großteil der Hydrosphäre von Schnee und Eis umgeben. Trotzdem haben sich die Flora und Fauna dieses Planeten mithilfe von Frostschutzproteinen angepasst und ein üppiges, lebendiges Ökosystem geschaffen."
  pc_pd_cryoflora_adj: "leuchtend"
