--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_modifiers_l_polish.yml
@@ -212,6 +212,8 @@
  pd_cryovolcano_desc: "Życie przetrwało na tej planecie dzięki składnikom odżywczym wyrzucanym przez kriowulkany, które emitują wodę, amoniak i metan spod zlodowaciałej powierzchni."
  pd_treeline: "Świat drzewograniczny"
  pd_treeline_desc: "Na tej planecie lasy kończą się na określonej wysokości, a powyżej dominują porosty i roślinność alpejska, dostosowana do surowego klimatu."
+ pd_peatland: "$pc_pd_peatland$"
+ pd_peatland_desc: "$pc_pd_peatland_desc$"
  pd_cryoflora: "Świat kriofloralny"
  pd_cryoflora_desc: "Hydrosfera planety jest w większości zamarznięta, a temperatury rzadko przekraczają punkt zamarzania. Flora i fauna przystosowały się dzięki białkom przeciwzamarzaniowym, tworząc piękny, świecący ekosystem."
  pd_lichen: "Świat porostowy"
