--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -716,6 +716,12 @@
  mod_pc_pd_treeline_habitability: "苔原星球宜居性"
  trait_pc_pd_treeline_preference: "苔原星球偏好"
  trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_peatland: "Peatland World"
+ pc_pd_peatland_desc: "A rocky planet with a nitrogen-oxygen atmosphere, where sprawling peatlands stretch across continents. Thick mats of moss and decaying vegetation form a living crust that stores immense reserves of organic matter, releasing slow tides of gas and moisture into the air."
+ pc_pd_peatland_adj: "peatty"
+ mod_pc_pd_peatland_habitability: "Tundra Habitability"
+ trait_pc_pd_peatland_preference: "Tundra Preference"
+ trait_pc_pd_peatland_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_marsh: "沼泽星球（草沼）"
  pc_pd_marsh_desc: "稠密的温和盐沼覆盖着整个星球表面。咸水塘一直延伸至天际，其中的纤维质植被可以过滤径流并固持土壤。"
  pc_pd_marsh_adj: "沼泽"
