--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -274,6 +274,8 @@
  pd_taiga_desc: "$pc_pd_taiga_desc$"
  pd_treeline: "$pc_pd_treeline$"
  pd_treeline_desc: "$pc_pd_treeline_desc$"
+ pd_peatland: "$pc_pd_peatland$"
+ pd_peatland_desc: "$pc_pd_peatland_desc$"
  pd_marsh: "$pc_pd_marsh$"
  pd_marsh_desc: "$pc_pd_marsh_desc$"
  pd_craton: "$pc_pd_craton$"
