--- a/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
+++ b/planetary_diversity/localisation/braz_por/planetarydiversity_planet_classes_l_braz_por.yml
@@ -526,6 +526,12 @@
  mod_pc_pd_treeline_habitability: "Tundra Habitability"
  trait_pc_pd_treeline_preference: "Tundra Preference"
  trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_peatland: "Peatland World"
+ pc_pd_peatland_desc: "A rocky planet with a nitrogen-oxygen atmosphere, where sprawling peatlands stretch across continents. Thick mats of moss and decaying vegetation form a living crust that stores immense reserves of organic matter, releasing slow tides of gas and moisture into the air."
+ pc_pd_peatland_adj: "peatty"
+ mod_pc_pd_peatland_habitability: "Tundra Habitability"
+ trait_pc_pd_peatland_preference: "Tundra Preference"
+ trait_pc_pd_peatland_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Mundo Crioflora"
  pc_pd_cryoflora_desc: "Mundo frio e rochoso com atmosfera de nitrogênio-oxigênio. Embora as temperaturas estejam frequentemente abaixo de zero, a maior parte da hidrosfera está presa em neve e gelo. Apesar disso, a flora e a fauna deste planeta adaptaram-se através de proteínas anticongelantes para criar um ecossistema exuberante e vibrante."
  pc_pd_cryoflora_adj: "brilhante"
