--- a/planetary_diversity/localisation/korean/planetarydiversity_engine_events_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_engine_events_l_korean.yml
@@ -100,6 +100,7 @@
  pdengine.21.tuya: "$pc_pd_tuya$"
  pdengine.21.cryovolcano: "$pc_pd_cryovolcano$"
  pdengine.21.treeline: "$pc_pd_treeline$"
+ pdengine.21.peatland: "$pc_pd_peatland$"
  pdengine.21.cryoflora: "$pc_pd_cryoflora$"
  pdengine.21.lichen: "$pc_pd_lichen$"
 
