--- a/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_planet_classes_l_korean.yml
@@ -545,6 +545,12 @@
  mod_pc_pd_treeline_habitability: "Tundra Habitability"
  trait_pc_pd_treeline_preference: "Tundra Preference"
  trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_peatland: "Peatland World"
+ pc_pd_peatland_desc: "A rocky planet with a nitrogen-oxygen atmosphere, where sprawling peatlands stretch across continents. Thick mats of moss and decaying vegetation form a living crust that stores immense reserves of organic matter, releasing slow tides of gas and moisture into the air."
+ pc_pd_peatland_adj: "peatty"
+ mod_pc_pd_peatland_habitability: "Tundra Habitability"
+ trait_pc_pd_peatland_preference: "Tundra Preference"
+ trait_pc_pd_peatland_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "얼음꽃 행성"
  pc_pd_cryoflora_desc: "대기가 질소와 산소로 조성된 차가운 암석형 행성입니다. 기온이 영하로 떨어지는 경우가 많지만 대부분의 수권은 눈과 얼음에 갇혀 있습니다. 그럼에도 불구하고 행성의 동식물은 부동액 단백질을 통해 적응하여 무성하고 활기찬 생태계를 만들어 냈습니다."
  pc_pd_cryoflora_adj: "빛나는"
