--- a/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_planet_classes_l_polish.yml
@@ -544,6 +544,12 @@
  mod_pc_pd_treeline_habitability: "Możliwość zamieszkania świata tundrowego"
  trait_pc_pd_treeline_preference: "Preferowany teren: tundra"
  trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_peatland: "Peatland World"
+ pc_pd_peatland_desc: "A rocky planet with a nitrogen-oxygen atmosphere, where sprawling peatlands stretch across continents. Thick mats of moss and decaying vegetation form a living crust that stores immense reserves of organic matter, releasing slow tides of gas and moisture into the air."
+ pc_pd_peatland_adj: "peatty"
+ mod_pc_pd_peatland_habitability: "Tundra Habitability"
+ trait_pc_pd_peatland_preference: "Tundra Preference"
+ trait_pc_pd_peatland_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Świat kriofloralny"
  pc_pd_cryoflora_desc: "Zimna, skalista planeta z atmosferą azotowo-tlenową. Choć temperatury często spadają poniżej zera, większość hydrosfery jest uwięziona w śniegu i lodzie. Mimo to flora i fauna przystosowały się dzięki białkom przeciwzamrożeniowym, tworząc bujny, żywy ekosystem."
  pc_pd_cryoflora_adj: "lśniący"
