--- a/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_planet_classes_l_russian.yml
@@ -551,6 +551,12 @@
  mod_pc_pd_treeline_habitability: "Tundra Habitability"
  trait_pc_pd_treeline_preference: "Tundra Preference"
  trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_peatland: "Peatland World"
+ pc_pd_peatland_desc: "A rocky planet with a nitrogen-oxygen atmosphere, where sprawling peatlands stretch across continents. Thick mats of moss and decaying vegetation form a living crust that stores immense reserves of organic matter, releasing slow tides of gas and moisture into the air."
+ pc_pd_peatland_adj: "peatty"
+ mod_pc_pd_peatland_habitability: "Tundra Habitability"
+ trait_pc_pd_peatland_preference: "Tundra Preference"
+ trait_pc_pd_peatland_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cryoflora: "Мир криофлоры"
  pc_pd_cryoflora_desc: "Холодный каменистый мир с азотно-кислородной атмосферой. Хоть температура ниже нуля, флора и фауна приспособились к ней с помощью белков-антифризов и образовали богатую, живую экосистему."
  pc_pd_cryoflora_adj: "криофлорная"
