--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
@@ -118,6 +118,7 @@
  pdengine.21.columnar: "$pc_pd_columnar$"
  pdengine.21.taiga: "$pc_pd_taiga$"
  pdengine.21.treeline: "$pc_pd_treeline$"
+ pdengine.21.peatland: "$pc_pd_peatland$"
  pdengine.21.marsh: "$pc_pd_marsh$"
  pdengine.21.craton: "$pc_pd_craton$"
  pdengine.21.tidepool: "$pc_pd_tidepool$"
