Update and improve Simplified Chinese localisations
Corrected and expanded translations for Opal and Peatland planet types, fixed tooltip values for Shroud planets, and improved city set and event localisations. These changes enhance consistency and accuracy in the Simplified Chinese localisation files.

--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -251,12 +251,6 @@
  mod_pc_pd_amethyst_habitability: "干旱星球宜居性"
  trait_pc_pd_amethyst_preference: "干旱星球偏好"
  trait_pc_pd_amethyst_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_opal: "Opal World"
- pc_pd_opal_desc: "Silica-rich waters once seeped through this arid world's crust, filling fractures and voids. As the planet dried, the deposits hardened into colossal opal formations that now dominate the landscape."
- pc_pd_opal_adj: "opaline"
- mod_pc_pd_opal_habitability: "Arid Habitability"
- trait_pc_pd_opal_preference: "Arid Preference"
- trait_pc_pd_opal_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_steppe: "干草原星球"
  pc_pd_steppe_desc: "干燥的岩石星球，拥有氮氧大气层。半干旱的草原中分布着起伏的山丘和平原，是陆地上的主要景观。尽管几乎没有林木，雨量尚足以维持灌木和草禾。"
  pc_pd_steppe_adj: "草地"
@@ -716,12 +710,6 @@
  mod_pc_pd_treeline_habitability: "苔原星球宜居性"
  trait_pc_pd_treeline_preference: "苔原星球偏好"
  trait_pc_pd_treeline_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_peatland: "Peatland World"
- pc_pd_peatland_desc: "A rocky planet with a nitrogen-oxygen atmosphere, where sprawling peatlands stretch across continents. Thick mats of moss and decaying vegetation form a living crust that stores immense reserves of organic matter, releasing slow tides of gas and moisture into the air."
- pc_pd_peatland_adj: "peatty"
- mod_pc_pd_peatland_habitability: "Tundra Habitability"
- trait_pc_pd_peatland_preference: "Tundra Preference"
- trait_pc_pd_peatland_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_marsh: "沼泽星球（草沼）"
  pc_pd_marsh_desc: "稠密的温和盐沼覆盖着整个星球表面。咸水塘一直延伸至天际，其中的纤维质植被可以过滤径流并固持土壤。"
  pc_pd_marsh_adj: "沼泽"
@@ -757,3 +745,15 @@
  mod_pc_pd_monsoon_habitability: "草原星球宜居性"
  trait_pc_pd_monsoon_preference: "草原星球偏好"
  trait_pc_pd_monsoon_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_opal: "蛋白石星球"
+ pc_pd_opal_desc: "富含硅的水流曾渗入这颗干旱星球的地壳，填充其中的裂缝与空隙。随着星球逐渐干涸，这些沉积物逐渐硬化为巨大的蛋白石构造，如今已遍布地表。"
+ pc_pd_opal_adj: "欧珀"
+ mod_pc_pd_opal_habitability: "干旱星球宜居性"
+ trait_pc_pd_opal_preference: "干旱星球偏好"
+ trait_pc_pd_opal_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_peatland: "泥炭地星球"
+ pc_pd_peatland_desc: "拥有氮氧大气层的岩石星球，其广阔的泥炭地横跨各大洲。厚厚的苔藓层与腐烂植被共同构成鲜活的地壳，储存着巨量的有机质，向空气中缓慢释放气体和水分。"
+ pc_pd_peatland_adj: "泥炭"
+ mod_pc_pd_peatland_habitability: "苔原星球宜居性"
+ trait_pc_pd_peatland_preference: "苔原星球偏好"
+ trait_pc_pd_peatland_preference_desc: "$trait_pc_arctic_preference_desc$"
