--- a/planetary_diversity_uniques/localisation/german/pd_uniques_l_german.yml
+++ b/planetary_diversity_uniques/localisation/german/pd_uniques_l_german.yml
@@ -100,7 +100,7 @@ l_german:
 
  #Events
  pdcrystal.100.name: "Edelstein des Lebens"
- pdcrystal.100.desc: "Ein Tiefenscan von §Y[From.GetName]§! enthüllte etwas Außergewöhnliches: über die Landschaft verteilte, hochaufragende Kristallformationen, die wir als §YAcean-Kristall§! bezeichneten. Diese Edelsteine scheinen die Gesundheit nahegelegenen organischen Lebens zu verbessern, und bemerkenswerterweise bleiben ihre Effekte sogar in isolierten Proben bestehen.\n\n§Y[Root.GetLeaderName]§! entdeckte auch Anzeichen eines Außenpostens im Dschungel. Wenn wir den Planeten halten können, werden wir die Ruinen erforschen können."
+ pdcrystal.100.desc: "Ein Tiefenscan von §Y[From.GetName]§! enthüllte etwas Außergewöhnliches: über die Landschaft verteilte, hochaufragende Kristallformationen, die wir als §YAcean-Kristall§! bezeichneten. Diese Edelsteine scheinen die Gesundheit nahegelegenen organischen Lebens zu verbessern, und bemerkenswerterweise bleiben ihre Effekte sogar in isolierten Proben bestehen.\n\n§Y[Root.Leader.GetName]§! entdeckte auch Anzeichen eines Außenpostens im Dschungel. Wenn wir den Planeten halten können, werden wir die Ruinen erforschen können."
  pdcrystal.100.a: "Erstaunlich."
  pdcrystal.200.name: "Ruinen im Dschungel"
  pdcrystal.200.desc: "Während sich unsere Kolonie auf §Y[Root.GetName]§! etabliert, haben wir entdeckt, dass die von unserer ersten Expedition gefundenen Ruinen bei weitem nicht die einzigen sind. Mehrere verlassene Lager, still und verwittert, finden sich über die umliegende Wildnis verstreut.\n\nWer diese frühen Bewohner waren und was aus ihnen wurde, bleibt unklar."
