--- a/planetary_diversity_uniques/localisation/polish/pd_uniques_l_polish.yml
+++ b/planetary_diversity_uniques/localisation/polish/pd_uniques_l_polish.yml
@@ -100,7 +100,7 @@
 
  #Events
  pdcrystal.100.name: "Klejnot życia"
- pdcrystal.100.desc: "Dogłębne skany §Y[From.GetName]§! ujawniły coś niezwykłego: wieżowe formacje kryształów rozrzucone po całej powierzchni planety, które nazwaliśmy §Ykryształem aceanu§!. Te klejnoty zdają się wzmacniać zdrowie otaczających je organizmów, a co niezwykle zadziwiające — ich działanie utrzymuje się nawet w odizolowanych próbkach.\n\n§Y[Root.GetLeaderName]§! odkrył również ślady posterunku w dżungli. Jeżeli zdołamy utrzymać tę planetę, będziemy mogli zbadać ruiny."
+ pdcrystal.100.desc: "Dogłębne skany §Y[From.GetName]§! ujawniły coś niezwykłego: wieżowe formacje kryształów rozrzucone po całej powierzchni planety, które nazwaliśmy §Ykryształem aceanu§!. Te klejnoty zdają się wzmacniać zdrowie otaczających je organizmów, a co niezwykle zadziwiające — ich działanie utrzymuje się nawet w odizolowanych próbkach.\n\n§Y[Root.Leader.GetName]§! odkrył również ślady posterunku w dżungli. Jeżeli zdołamy utrzymać tę planetę, będziemy mogli zbadać ruiny."
  pdcrystal.100.a: "Niesamowite."
  pdcrystal.200.name: "Ruiny w dżungli"
  pdcrystal.200.desc: "Podczas zakładania kolonii na §Y[Root.GetName]§! odkryliśmy, że ruiny znalezione w początkowych badaniach wcale nie były jedynymi. Kilka opuszczonych obozów, milczących i nadgryzionych przez czas, rozsianych jest po okolicznych dzikich ostępach.\n\nKim byli dawni mieszkańcy i co ich spotkało, wciąż pozostaje tajemnicą."
@@ -133,7 +133,7 @@
  pd_origin_init_crystal_NAME:0 "Układ kryształowy"
  pd_origin_init_crystal_DESC:0 "Układ początkowy zawieraja świat kryształowy"
  pd_origin_init_crystal_NAME:0 "Układ kryształowy"
- pd_origin_init_crystal_DESC:0 "Układ początkowy zawieraja świat kryształowy"  
+ pd_origin_init_crystal_DESC:0 "Układ początkowy zawieraja świat kryształowy"
  origin_pd_crystal_world:0 "Zrodzeni z kryształu"
  origin_pd_crystal_world_desc:0 "Ta cywilizacja wyłoniła się na bujnym świecie zdominowanym przez strzeliste kryształowe filary uformowane z rzadkiego kryształu aceanu."
  origin_tooltip_crystal_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- §Y$pc_tropical$§! (Rozmiar: £planetsize£ 20)$TABBED_NEW_LINE$- Modyfikator planety: ['concept_pd_crystal']$TABBED_NEW_LINE$- Cechy planety: ['concept_d_pd_acean_pillars']\n- Dostęp do dodatkowych technologii:$TABBED_NEW_LINE$- ['concept_acean_research', £engineering_research£ $tech_acean_research$]$TABBED_NEW_LINE$- ['concept_acean_superorganism_larva', £society_research£ $tech_acean_superorganism_larva$]$TABBED_NEW_LINE$- ['concept_acean_medical_center', £society_research£ $concept_acean_medical_center$] (Zwykłe imperia)$TABBED_NEW_LINE$- ['concept_acean_gestation_pools', £society_research£ $tech_acean_gestation_pools$] (Imperia Roju)$TABBED_NEW_LINE$- ['concept_acean_resonators', £engineering_research£ $tech_acean_resonators$] (Imperia Maszyn)"
@@ -196,7 +196,7 @@
  pc_pd_biosynth: "$pd_biosynth$"
  pc_pd_biosynth_desc: "$pd_biosynth_desc$"
  mod_planet_farmers_engineering_research_produces_add: "£engineering£ $engineering_research$ z miejsc pracy £job_farmer£ [GetFarmerPlural]"
- 
+
  #Deposits
  d_pd_depleted_minerals: "Wyczerpane minerały"
  d_pd_depleted_minerals_desc: "Chociaż brak śladów górnictwa czy wydobycia, skany wskazują, że minerały tej planety zostały niemal całkowicie wyczerpane."
@@ -297,7 +297,7 @@
  #Decisions
  decision_pd_add_biosynth_canal_system: "Budowa systemu kanałów biosyntetycznych"
  decision_pd_add_biosynth_canal_system_desc: "Na wzór tych ze świata biosyntetycznego możemy zbudować kanały, aby zwiększyć wydajność rolnictwa na tej planecie."
- 
+
  #Buildings
  building_pd_biosynth_cauldron: "Kocioł biosyntetyczny"
  building_pd_biosynth_cauldron_desc: "Ten zaawansowany zakład produkcyjny może dostosowywać swoją wydajność do potrzeb planety, wykorzystując żywy metal do przeprogramowywania całych systemów fabrycznych z niezwykłą szybkością."
@@ -336,7 +336,7 @@
  situation_pd_biosynth_world_extra_funding: "Dodatkowe fundusze"
  situation_pd_biosynth_world_extra_funding_desc: "Jeszcze nigdy dodatkowe fundusze nie spowolniły żadnego projektu."
  situation_pd_biosynth_stage_effects: "Będziemy kontynuować eksplorację tego świata w poszukiwaniu wskazówek."
- 
+
  pd_unit_04s_knowledge: "Projekty inżynieryjne Jednostki 04"
  pd_unit_04s_knowledge_desc: "W ramach pomocy jednemu ze swoich tworów Jednostka 04 podzieliła się z nami częścią swojej zaawansowanej wiedzy inżynieryjnej."
 
