--- a/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
+++ b/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
@@ -91,7 +91,7 @@
  d_pd_acean_pillars: "艾森水晶柱"
  d_pd_acean_pillars_desc: "星球表面覆盖着高大的艾森水晶柱。它们与行星相连，会对附近的有机体造成强烈影响，能够平复情绪、促进生育。"
  pdcrystal.100.name: "生命宝石"
- pdcrystal.100.desc: "对§Y[From.GetName]§!深入扫描后，我们发现了一些不同寻常的东西：大地上散落着高耸的水晶构造。我们将之命名为§Y艾森水晶§!。这些宝石似乎能够增进附近的有机生命的健康水平；令人惊讶的是，即使在分离下来的样本中，这种效果仍然可以继续存在。\n\n§Y[Root.GetLeaderName]§!还在丛林中发现了一座基地的痕迹。若能控制这颗星球，我们就可以对这些遗迹展开探索。"
+ pdcrystal.100.desc: "对§Y[From.GetName]§!深入扫描后，我们发现了一些不同寻常的东西：大地上散落着高耸的水晶构造。我们将之命名为§Y艾森水晶§!。这些宝石似乎能够增进附近的有机生命的健康水平；令人惊讶的是，即使在分离下来的样本中，这种效果仍然可以继续存在。\n\n§Y[Root.Leader.GetName]§!还在丛林中发现了一座基地的痕迹。若能控制这颗星球，我们就可以对这些遗迹展开探索。"
  pdcrystal.100.a: "真不错。"
  pdcrystal.200.name: "林中遗迹"
  pdcrystal.200.desc: "自§Y[Root.GetName]§!殖民地建立伊始，我们就发现并非只有降落点附近存在遗迹。周围的荒野中还散落着好几处废弃营地，寂静无声，饱经风霜。\n\n尚不清楚这些早期居民的身份，以及后来发生的事情。"
