--- a/planetary_diversity_uniques/localisation/russian/pd_uniques_l_russian.yml
+++ b/planetary_diversity_uniques/localisation/russian/pd_uniques_l_russian.yml
@@ -100,7 +100,7 @@
 
  #Events
  pdcrystal.100.name: "Gem of Life"
- pdcrystal.100.desc: "A deep scan of §Y[From.GetName]§! revealed something extraordinary: towering crystal formations scattered across the landscape, which we designated §YAcean Crystal§!. These gemstones seem to enhance the health of nearby organic life, and remarkably, their effects persist even in isolated samples.\n\n§Y[Root.GetLeaderName]§! also discovered signs of an outpost in the jungle, if we can hold the planet we will be able to explore the ruins."
+ pdcrystal.100.desc: "A deep scan of §Y[From.GetName]§! revealed something extraordinary: towering crystal formations scattered across the landscape, which we designated §YAcean Crystal§!. These gemstones seem to enhance the health of nearby organic life, and remarkably, their effects persist even in isolated samples.\n\n§Y[Root.Leader.GetName]§! also discovered signs of an outpost in the jungle, if we can hold the planet we will be able to explore the ruins."
  pdcrystal.100.a: "Amazing."
  pdcrystal.200.name: "Ruins in the Jungle"
  pdcrystal.200.desc: "As our colony establishes itself on §Y[Root.GetName]§!, we have discovered that the ruins found by our initial were by no means the only one. Several deserted camps, silent and weather-worn, can be found scattered across the surrounding wilderness.\n\nWho these early inhabitants were and what became of them remains unclear."
