Update and reorder dust and volcanic planet localisations
Reordered and revised the localisation entries for 'dust' and 'volcanic' planet types in Simplified Chinese. Improved translations and descriptions for '沙暴星球' and '火山星球', ensuring consistency across engine events, planet classes, and planet modifiers files.

--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -559,8 +559,6 @@
  pc_ethane_ocean_desc: "这是大气层稀薄的岩石星球，对于任何高等生命都很致命。这里被包裹在一层液态乙烷海洋中。"
  pc_diamond: "金刚石星球"
  pc_diamond_desc: "这是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式。这里碳元素含量极高，加上高温高压条件，该星球的大部分物质都被塑造成了金刚石。"
- pc_volcanic_pd: "火山星球"
- pc_volcanic_pd_desc: "这是地表火山遍布的岩石星球。大气层相当稀薄，或者完全没有大气；星球内部的高烈度地质活动造成了持续的火山喷发。这类星球没法维持有机生命的存在。有时能看到地表上涌起高达500千米的硫磺喷流。"
  pc_chthonian: "气陨星核"
  pc_chthonian_desc: "这是荒芜的岩石星球，大气层相当稀薄，或者完全没有大气。地表遍布着陨石坑，不存在任何生命形式。这曾是一颗气态巨行星，但是氢氦大气层已经消失殆尽，只剩下光秃秃的金属核心。"
  pc_hot_gas_giant: "热气态巨星"
@@ -692,12 +690,6 @@
  mod_pc_pd_cactus_habitability: "沙漠星球宜居性"
  trait_pc_pd_cactus_preference: "沙漠星球偏好"
  trait_pc_pd_cactus_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_dust: "Dust Storm World"
- pc_pd_dust_desc: "This desert world's unstable moisture cycles and powerful wind currents drive vast dust fronts across the surface. These storms sweep the planet in slow but powerful storms, burying terrain and reshaping the landscape."
- pc_pd_dust_adj: "dusty"
- mod_pc_pd_dust_habitability: "Desert Habitability"
- trait_pc_pd_dust_preference: "Desert Preference"
- trait_pc_pd_dust_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_columnar: "石柱星球"
  pc_pd_columnar_desc: "有氮氧大气，水体广袤的岩石星球。表面被海洋覆盖，分散的陆地由柱状玄武岩构成。这是亿万年的剧烈火山活动的结果。"
  pc_pd_columnar_adj: "石柱"
@@ -763,3 +755,11 @@
  mod_pc_pd_peatland_habitability: "苔原星球宜居性"
  trait_pc_pd_peatland_preference: "苔原星球偏好"
  trait_pc_pd_peatland_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_pd_dust: "沙暴星球"
+ pc_pd_dust_desc: "这颗沙漠星球上不稳定的湿度循环与强劲的气流，驱动着庞大的沙尘锋面横扫地表。这些沙暴以缓慢却强劲的态势席卷整颗星球，不断掩埋地表、重塑地貌。"
+ pc_pd_dust_adj: "沙尘"
+ mod_pc_pd_dust_habitability: "沙漠星球宜居性"
+ trait_pc_pd_dust_preference: "沙漠星球偏好"
+ trait_pc_pd_dust_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pc_volcanic_pd: "火山星球"
+ pc_volcanic_pd_desc: "火山遍布的岩石星球，大气层相当稀薄，或者完全不存。由于星球内部的地质活动，火山爆发持续不断，因而这类行星无法维持有机生命。地表可以喷发出高达500km的硫磺羽流。"
