--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -762,4 +762,4 @@
  trait_pc_pd_dust_preference: "沙漠星球偏好"
  trait_pc_pd_dust_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_volcanic_pd: "火山星球"
- pc_volcanic_pd_desc: "火山遍布的岩石星球，大气层相当稀薄，或者完全不存。由于星球内部的地质活动，火山爆发持续不断，因而这类行星无法维持有机生命。地表可以喷发出高达500km的硫磺羽流。"
+ pc_volcanic_pd_desc: "这是地表火山遍布的岩石星球。大气层相当稀薄，或者完全没有大气；星球内部的高烈度地质活动造成了持续的火山喷发。这类星球没法维持有机生命的存在。有时能看到地表上涌起高达500千米的硫磺喷流。"
