--- a/planetary_diversity/localisation/japanese/planetarydiversity_planet_classes_l_japanese.yml
+++ b/planetary_diversity/localisation/japanese/planetarydiversity_planet_classes_l_japanese.yml
@@ -578,7 +578,7 @@
  trait_pc_pd_wet_superhabitable_preference: "Wet Superhabitable Preference"
  trait_pc_pd_wet_superhabitable_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_cold_superhabitable: "Cold Superhabitable World"
- pc_pd_cold_superhabitable_desc: "A cold, rocky super-terrestrial super-terrestrial world, this planet has a dense nitrogen-oxygen atmosphere.  It is a perfect cradle for evolving life, with rich, productive tundras and shallow ocean basins. Still, the heavy gravity is a struggle for those unaccustomed to it."
+ pc_pd_cold_superhabitable_desc: "A cold, rocky super-terrestrial world, this planet has a dense nitrogen-oxygen atmosphere.  It is a perfect cradle for evolving life, with rich, productive tundras and shallow ocean basins. Still, the heavy gravity is a struggle for those unaccustomed to it."
  pc_pd_cold_superhabitable_adj: "super-terrestrial"
  mod_pc_pd_cold_superhabitable_habitability: "Cold Superhabitable Habitability"
  trait_pc_pd_cold_superhabitable_preference: "Cold Superhabitable Preference"
