--- a/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
@@ -178,7 +178,7 @@
  #Nuke Own Planet Decision
  decision_nuked_own_planet: "Zniszczyć środowisko"
  decision_nuked_own_planet_desc: "Potrzebujemy radioaktywnego środowiska, aby się rozwijać. Możemy przekształcić tę planetę w zgodzie z naszymi potrzebami, używając konwencjonalnych głowic nuklearnych."
- 
+
  #Economic Categories
  mod_planet_bio_trophies_unity_produces_add: "£unity£ $unity$ na $pop_group_unit$ [GetPopAssemblersPluralWithIcon]"
 
@@ -196,7 +196,7 @@
  decision_pd_build_dayside_farm: "$decision_build_dayside_farm$"
  decision_pd_build_dayside_farm_desc: "$decision_build_dayside_farm_desc$"
  decision_pd_build_dayside_farm_effects_short: "$decision_build_dayside_farm_effects_short$"
- 
+
  #Gaia Terraforming
  policy_pd_gaia_modifier: "Kształtowanie świata"
  policy_pd_gaia_modifier_desc: "Choć kosztowne, możemy zastosować nasze zaawansowane techniki terraformowania na każdym projekcie planetarnym, zapewniając, że każda terraformowana planeta będzie idealnie ukształtowana."
@@ -206,7 +206,7 @@
  pd_normal_terraforming_name: "Terraformowanie standardowe"
  pd_normal_terraforming: "Terraformowanie standardowe"
  pd_normal_terraforming_desc: "Koszty terraformowania pozostaną standardowe, użyjemy kształtowania świata tylko tam, gdzie uznamy to za konieczne."
- 
+
  #Nemma World
  pd_nemma: "Świat Olbrzymów"
  pd_nemma_desc: "Wyspy tej planety to w rzeczywistości olbrzymie, mineralnie opancerzone płazy-reptyle. Nazywane Nemmami, unoszą się na powierzchni i pozostają spokojne, jeśli nie są niepokojone."
@@ -219,3 +219,7 @@
  zone_pd_hive_spawning_desc: "Strefa przeznaczona do wylęgu nowych dronów."
  zone_pd_machine_replication: "Strefa montażu"
  zone_pd_machine_replication_desc: "Strefa przeznaczona do konstrukcji nowych jednostek maszyn."
+
+ #Pelagic Planet
+ pd_pelagic_planet: "Pelagic"
+ pd_pelagic_planet_desc: "This planet is almost entirely enveloped by a global ocean, with almost no landmasses breaching the surface."
