--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_l_simp_chinese.yml
@@ -196,3 +196,7 @@
  zone_pd_hive_spawning_desc: "专门用于繁衍新个体的特区。"
  zone_pd_machine_replication: "装配特区"
  zone_pd_machine_replication_desc: "专门用于建造新机械单位的特区。"
+
+ #Pelagic Planet
+ pd_pelagic_planet: "Pelagic"
+ pd_pelagic_planet_desc: "This planet is almost entirely enveloped by a global ocean, with almost no landmasses breaching the surface."
