--- a/planetary_diversity_ascension_worlds/localisation/braz_por/planetarydiversity_aw_flooded_l_braz_por.yml
+++ b/planetary_diversity_ascension_worlds/localisation/braz_por/planetarydiversity_aw_flooded_l_braz_por.yml
@@ -16,7 +16,7 @@
  decision_pd_aw_flood_habitat_tooltip: "Habitability: §R-20%§!\nConsidered an §YOcean§! world for §YAquatic§! species.\nIce will be harvested from a system with an §Y$sm_ice_mining_station$§! on the starbase."
 
  flooded_habitat: "Flooded"
- flooded_habitat_desc: "Engulfed by water, this world faithfully mirrors the idyllic environment of aquatic denizens."
+ flooded_habitat_desc: "Engulfed by water, this world is an idyllic environment for aquatic denizens."
  pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_LOGISTIC_GROWTH_MULT$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
 
  pd_aw_flooded_planet: "Flooded World"
@@ -31,3 +31,7 @@
  ocean_paradise_2_desc: "$ocean_paradise_desc$"
  ocean_paradise_hive_2: "$ocean_paradise_hive$"
  ocean_paradise_hive_2_desc: "$ocean_paradise_hive_desc$"
+
+ #Pelagic Planet
+ pd_pelagic_planet: "Pelagic"
+ pd_pelagic_planet_desc: "This planet is almost entirely enveloped by a global ocean, with almost no landmasses breaching the surface."
