--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_flooded_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_flooded_l_simp_chinese.yml
@@ -25,3 +25,7 @@
  ocean_paradise_2_desc: "$ocean_paradise_desc$"
  ocean_paradise_hive_2: "$ocean_paradise_hive$"
  ocean_paradise_hive_2_desc: "$ocean_paradise_hive_desc$"
+
+ #Pelagic Planet
+ pd_pelagic_planet: "Pelagic"
+ pd_pelagic_planet_desc: "This planet is almost entirely enveloped by a global ocean, with almost no landmasses breaching the surface."
