--- a/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
+++ b/planetary_diversity/localisation/russian/planetarydiversity_l_russian.yml
@@ -219,3 +219,7 @@
  zone_pd_hive_spawning_desc: "A zone dedicated to the spawning of new drones."
  zone_pd_machine_replication: "Assembly Zone"
  zone_pd_machine_replication_desc: "A zone dedicated to the construction of new machine units."
+
+ #Pelagic Planet
+ pd_pelagic_planet: "Pelagic"
+ pd_pelagic_planet_desc: "This planet is almost entirely enveloped by a global ocean, with almost no landmasses breaching the surface."
