--- a/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
+++ b/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
@@ -192,5 +192,5 @@
  zone_pd_trade_market: "商业协调中心"
  zone_pd_trade_market_desc: "这一枢纽统筹整颗星球的商业活动，引导商品、服务与数据在各大区域间流动。"
  mod_country_resource_max_trade_add: "贸易存储容量"
- zone_pd_command_nexus: "中枢指挥部"
- zone_pd_command_nexus_desc: "该指挥部是这颗行星的军事管理核心机构，通过战略规划、作战协调与毫不妥协的监管维系战争体系的运转。"
+ zone_pd_command_nexus: "中枢总部"
+ zone_pd_command_nexus_desc: "该总部是这颗行星的军事管理核心机构，通过战略规划、作战协调与毫不妥协的监管维系战争体系的运转。"
