--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_flooded_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_flooded_l_simp_chinese.yml
@@ -13,7 +13,7 @@
  decision_pd_aw_unflood_habitat_desc: "这个居住站可以成为我们人民的理想家园。排空居住站里的海洋，我们可以保证那些陆上生命的和乐生活。"
  decision_pd_aw_flood_habitat_tooltip: "宜居性：§R-20%§!\n对§Y水生§!物种，相当于§Y海洋§!星球。\n如果恒星系的恒星基地上有§Y$sm_ice_mining_station$§!，将会从此恒星系开采冰。"
  flooded_habitat: "洪潮"
- flooded_habitat_desc: "这个星球被灌满了水，用于模拟水生生物的自然生长环境。"
+ flooded_habitat_desc: "这个星球被灌满了水，是水生生物的理想家园。"
  pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$：§G+3§!\n$MOD_LOGISTIC_GROWTH_MULT$：§G+10%§!\n$mod_planet_jobs_produces_mult$：§G+5%§!\n§Y非水生§!宜居性：§R-20%§!"
  pd_aw_flooded_planet: "洪潮星球"
  pd_aw_flooded_planet_desc: "这个海洋星球是水生物种的理想家园。水下生命过着和乐的生活。"
@@ -25,7 +25,5 @@
  ocean_paradise_2_desc: "$ocean_paradise_desc$"
  ocean_paradise_hive_2: "$ocean_paradise_hive$"
  ocean_paradise_hive_2_desc: "$ocean_paradise_hive_desc$"
-
- #Pelagic Planet
- pd_pelagic_planet: "Pelagic"
- pd_pelagic_planet_desc: "This planet is almost entirely enveloped by a global ocean, with almost no landmasses breaching the surface."
+ pd_pelagic_planet: "大洋星球"
+ pd_pelagic_planet_desc: "这颗星球的表面全部都被浩瀚的汪洋覆盖，几乎没有露出水面的陆地。"
